Legend:

[+] New/improved feature
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.6.0

[+] Workaround for automake 1.14 subdir-objects bug(13928).
[+] Fixed some LLVM related warnings and errors (clang/clang++)

[+][hal] Added NF port extensions

[+][pipeline] Added missing support for OFPP_TABLE
[+][pipeline] Added NF port type extensions
[+][pipeline] Added L2 (ETH_DST, VLAN) l2hash matching algorithm
[B][pipeline] Fixed issue #40 (bug) => set cookie field in Packet-In messages based on flow entry
[+][common] All crofsock instances run in dedicated own thread
[+][common] Revised thread support in ciosrv
[+][common] Revised classes crofconn and crofsock => new scheduling for OpenFlow messages
[+][common] Revised classes crofctl, crofdpt and crofchan => API updated
[B][common] Doxygen documentation updated
[+][common] New thread API added to rofl::cioloop

v0.5.3

[B][pipeline] Issue #40 (bug) => invalid cookie field in Packet-In messages for OpenFlow 1.3
                                 (won't fix), fix available in 0.6.0

[B][hal] Updated misleading documentation concerning flow_mod_add/modify calls


v0.5.2

[B][common] Fixed issue #39 (bug) => set flag keep_on_runnin gin method cioloop:run() to false, when
                                     terminating the loop
[B][common] Fixed issue #38 (bug) => handling so far uncaught exception in etherswitch::operator<<()
[B][common] Fixed issue #37 (bug) => cofactions::drop_action()
[+][common] Fixed issue #36 (enhancement) => making cofactions::count_action_type() const method
[B][common] Fixed issue #33 (bug) => added fragmentation support for overlong OFP messages to OpenFlow 1.2

[B][pipeline] Fixed default table action for OF1.3 according to spec (backported)

v0.5.1

[B][pipeline] Fixed improper byte counter setting for group statistics
[B][pipeline] Fixed bug in the destruction of of1x_stats_group_desc_msg_t

v0.5.0

[+][common] Improved OF1.3 support and other fixes