@@ -38,6 +38,11 @@ Doxygen documentation
 ================================
 Documentation can be compiled via `make doc`. Documentation is generated in build/doc/ folder
 
+Known issues
+================================
+
+* Certain GCC 4.8.X family versions are buggy and don't properly compile ROFL with -O3 optimizations. Please use GCC 4.8.3 or another version family.
+
 FAQ
 ===
 
