@@ -61,6 +61,9 @@ m4_include([config/versioning.m4])
 # Checking OpenSSL
 m4_include([config/openssl.m4])
 
+# Perform GCC checkings
+m4_include([config/gcc.m4])
+
 # Output files
 AC_CONFIG_FILES([
 
